package personal.interpreter;

public interface AbstractExpression {
	int interpret();
}